objects/MPW_ECCN_Info__c.object
<CustomObject>
    <fields>
        <fullName>Brief_Description_of_IC_Device__c</fullName>
        <label>Brief Description of IC Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMDID__c</fullName>
        <label>CRMDID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRYPTIC__c</fullName>
        <label>Subject to Encryption Controls (Y/N)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Cell_Name__c</fullName>
        <label>Customer Cell Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Chip_Project_Name__c</fullName>
        <label>Design / Chip / Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designed_Dev_using_Classified_Info__c</fullName>
        <label>DesignedDevelopedClassified Information?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designed_Mod_or_Adapt_for_Mil_App__c</fullName>
        <label>Designed, Modified/Adapted Military App?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>MPW ECCN Info</relationshipLabel>
        <relationshipName>MPW_ECCN_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Export_Control_Form__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Export Control Form</label>
        <referenceTo>Export_Control_Form__c</referenceTo>
        <relationshipLabel>MPW ECCN Info</relationshipLabel>
        <relationshipName>MPW_ECCN_Info</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HTS_Schedule_B_Number__c</fullName>
        <label>HTS / Schedule B Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTS__c</fullName>
        <label>HTS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITAR_End_Use_Equip_Cat__c</fullName>
        <label>ITAR End Use Equipment Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITAR_Sub_Category__c</fullName>
        <label>ITAR: Product Category / Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITAR__c</fullName>
        <label>Subject to ITAR (Y/N)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intended_Disposition__c</fullName>
        <label>Intended Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intended_End_Use_of_IC_Device__c</fullName>
        <label>Intended End Use of IC Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOSIS_Cell_name__c</fullName>
        <label>Topcell / Cell Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTCR__c</fullName>
        <label>MTCR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nuclear_Chemical_Weapon_Missile_related__c</fullName>
        <label>Nuclear, Chemical Weapon/Missile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PbFree_C4__c</fullName>
        <label>ITAR: Design/Tech Data Category/Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pb_Free_Bump_WLCSP_Cu_Pillar_Reqd__c</fullName>
        <label>Pb Free  Bump WLCSP/HI/Cu Pillar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ECCN__c</fullName>
        <label>EAR: Product ECCN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_No__c</fullName>
        <label>Design / Project Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <label>SME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_ECCN__c</fullName>
        <label>EAR: Design ECCN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Security_Code__c</fullName>
        <label>US Security Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MPW ECCN Info</label>
    <nameField>
        <displayFormat>MPWECCN-{000000}</displayFormat>
        <label>MPW ECCN Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MPW ECCN Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>